# poc-emstime

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: ci.yml
code/: pyproject.toml
code/frontend/: index.html  package-lock.json  package.json
code/frontend/src/: App.css  App.tsx  index.css  main.tsx
code/frontend/src/api/: client.ts  types.ts  useDatasets.ts  useRunChart.ts  useRunDetail.ts  useRunProgress.ts  useRuns.ts
code/frontend/src/components/: AnomalyChart.css  AnomalyChart.tsx  FaultTypeTable.css  FaultTypeTable.tsx  MetricsCard.css  MetricsCard.tsx  RunProgressPanel.css  RunProgressPanel.tsx  StatusBadge.css  StatusBadge.tsx
code/frontend/src/pages/: DashboardPage.css  DashboardPage.tsx  NewRunPage.css  NewRunPage.tsx  RunDetailPage.css  RunDetailPage.tsx
code/src/poc_emstime/: evaluate.py  faults.py  features.py  ingest.py  model.py  pipeline.py
code/src/poc_emstime/app/: config.py  db.py  db_models.py  downsample.py  jobs.py  main.py  progress.py  schemas.py
code/src/poc_emstime/app/routers/: datasets.py  runs.py
code/tests/app/: test_api.py  test_config.py  test_db.py  test_downsample.py  test_jobs.py
code/tests/fixtures/: sample_channel.csv  sample_pipeline_channel.csv
code/tests/integration/: test_pipeline_end_to_end.py  test_pipeline_progress_and_config.py
code/tests/unit/: test_evaluate.py  test_faults.py  test_features.py  test_ingest.py  test_model.py
data/: README.md  fetch.sh
research/: poc_emstime-ml_learning_template.py  poc_emstime-research-01.txt
