[project]
name = "poc-emstime"
version = "0.1.0"
description = "ML pipeline for sub-second power-grid time-series anomaly detection (satellite clock / GPS timing faults)"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "joblib>=1.3",
]

[project.optional-dependencies]
app = [
    "sqlmodel>=0.0.22",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[project.scripts]
poc-emstime = "poc_emstime.pipeline:main"
poc-emstime-app = "poc_emstime.app.main:serve"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: runs the full pipeline against tests/fixtures/ data",
]
addopts = "-m 'not integration'"
